--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     }
                 }
 
-                // "Game of Life"-like neighborhood checks
+                // Eating/multiplying mechanics
                 int neighbors = 0;
                 for (int i = 0; i < particleLimit; i++) {
                     if (i == currentIndex) { continue; }
