--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             const float decayRate = 0.0; // chance that a particle randomly breaks
             const float distanceCutoff = 0.000001;
             const float simulationSpeed = 1.0;
-            const bool cyclicalGeometry = false; // Wrap around x- and y-coordinates on the edges?
+            const bool cyclicalGeometry = true; // Wrap around x- and y-coordinates on the edges?
 
             const float PI = 3.1415926535897932384626433832795;
             const float attractionAngle = 0.0; // Rotate the attraction vector. In degrees.
