--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Ogneron - Exophysics</title>
+        <title>Exophysics</title>
         <meta charset="utf-8">
     </head>
     <!--
