--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
         <script type="x-shader/x-vertex" id="vertex-shader">
             #version 300 es
             precision lowp float;
-            // constants
-            const int extraUniforms = 1;
-            const int particleLimit = min(gl_MaxVertexUniformVectors - extraUniforms, 1024);
+            // Don't change the following line. The JavaScript code below will fill in this value
+            const int particleLimit = 0;
 
             // tweakable parameters
             const float floorGravity = 0.0;
@@ -249,7 +248,7 @@
                 param.paused = false;
 
                 initUI(gl, param);
-                const shaderInfo = initShaders(gl);
+                const shaderInfo = initShaders(gl, param.particleLimit);
                 const buffers = initBuffers(gl, shaderInfo, param);
                 drawScene(gl, shaderInfo, buffers, param);
             }
@@ -285,8 +284,9 @@
                 });
             }
 
-            function initShaders(gl) {
+            function initShaders(gl, particleLimit) {
                 const vertexSource = document.getElementById("vertex-shader").text
+                    .replace(/(particleLimit = )\d+;/, '$1' + particleLimit + ';');
                 const fragmentSource = document.getElementById("fragment-shader").text
                 const feedbackVars = ['state', 'newV'];
                 const shaderProgram = createProgram(gl, vertexSource, fragmentSource, feedbackVars);
