--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                 state.z += state.y * energyGain;
 
                 // Attraction of particles towards a center of mass
+                // Note: This is not the same as gravity. See newer versions
+                //       for a better gravity formula.
                 if (particleGravity != 0.0) {
                     vec4 particle_pos;
                     vec4 center_of_mass;
