--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <canvas id="canvas" style="display: block; height: 100vh; width: 100vw;"></canvas>
         <script>
             var parameters = {
-                particleLimit: 256,
+                particleLimit: 1024,
                 extraUniforms: 1, // Besides "allStates", we use 1 more uniform: "userInput"
                 logFPS: true,
             }
@@ -59,44 +59,30 @@
         <script type="x-shader/x-vertex" id="vertex-shader">
             #version 300 es
 
+            const float PI = 3.1415926535897932384626433832795;
+            const float TAU = 2.0 * PI;
+
             // Physical Constants
-            const float gravity = 1000.0;
-            const float gravityPower = 4.0;
-            const float gravityScale = 100.0; // scales the distance between particles
-            const float strongAttraction = 0.05;
-            const float strongAttractionDistanceMax = 0.06;
-            const float strongAttractionDistanceMin = 0.00;
-            const float flavorAttraction = -1.0;
-            const float flavorAttractionPower = 4.0;
-            const float flavorAttractionScale = 100.0; // scales the distance between particles
-            const float numFlavors = 9.0;
-            const float bounceDampeningFactor = 0.99;
-            const float maxAccel = 0.01;
-            const float pointerRadius = 0.30;
-            const float pointerSlowFactor = 0.0;
-            const float pointerPullFactor = 0.02;
-            const float energyGain = 0.0; // it's warmer at the top, and the particles will grow
-            const float decayRate = 0.0; // chance that a particle randomly breaks
-            const float distanceCutoff = 0.001;
-            const float simulationSpeed = 1.0;
+            const float speed = 0.01;
+            const float visionRadius = 0.1;
+            const float constantRotation = PI;
+            const float attractionRotation = PI / 360.0 * 17.0;
+            const float distanceCutoff = 0.000001;
             const bool cyclicalGeometry = true; // Wrap around x- and y-coordinates on the edges?
 
-            const float PI = 3.1415926535897932384626433832795;
             const float attractionAngle = 0.0; // Rotate the attraction vector. In degrees.
             const mat2 attractionRotationMatrix = mat2(
                 cos(attractionAngle / 360.0 * PI), sin(attractionAngle / 360.0 * PI),
                 -sin(attractionAngle / 360.0 * PI), cos(attractionAngle / 360.0 * PI));
 
             // Derived particle properties, based on flavor
-            const float maxVs[] = float[](0.01 / simulationSpeed);
-            const float weights[] = float[](1.0);
             const vec3 colors[] = vec3[](
+                vec3(0.0, 0.7, 0.0),
                 vec3(1.0, 0.0, 0.7),
                 vec3(0.0, 1.0, 1.0),
                 vec3(1.0, 0.8, 0.0),
                 vec3(0.0, 0.0, 1.0),
                 vec3(1.0, 0.0, 0.0),
-                vec3(0.0, 1.0, 0.0),
                 vec3(0.5, 0.5, 0.5),
                 vec3(1.0, 1.0, 1.0),
                 vec3(0.5, 0.0, 1.0)
@@ -123,9 +109,18 @@
                                      vec2(12.9898, 78.233))) * 43758.5453);
             }
 
-            int getFlavor(vec4 state) {
-                return int(floor(state.w * numFlavors));
+            float modulo2PI(float angle) {
+                if (angle < 0.0)
+                    angle += TAU * ceil(-angle / TAU);
+                if (angle > TAU)
+                    angle -= TAU * floor(angle / TAU);
+                return angle;
             }
+
+            //float atan2(float y, float x) {
+            //    bool s = abs(x) > abs(y);
+            //    return mix(PI/2.0 - atan(x,y), atan(y,x), s);
+            //}
 
             vec2 getDistance(vec2 me, vec2 other) {
                 vec2 dif = other.xy - me.xy;
@@ -143,109 +138,67 @@
             }
 
             void main() {
+                /* state.x = X-coordinate
+                 * state.y = Y-coordinate
+                 * state.z = rotation (between 0 and 2*PI)
+                 * state.w = unused
+                 * velocity.xyzw = unused
+                 */
+
                 state = oldState;
                 velocity = oldVelocity;
                 randomSeed = random;  // randomize the seed to make each run unique, if desired
 
                 gl_Position = vec4(state.xy, 0.0, 1.0);
-                gl_PointSize = 3.0;
+                gl_PointSize = 7.0;
                 float scale = 1.0;
 
-                if (random < decayRate) {
-                    state.z = 0.0;
-                }
-
                 // Initialization, decay, and respawning of particles:
-                if (state.z < 0.001) {
-                    velocity.xy = (vec2(rand(), rand()) * 2.0 - 1.0) * maxVs[0] / 100000.0;
+                if (state.z == 0.0) {
                     state.xy = vec2(rand(), rand()) * 2.0 - 1.0;
-                    state.z = 1.0;
-                    state.w = rand();
+                    state.z = rand() * PI;
                 }
-
-                // Derived attributes
-                int flavor = getFlavor(state);
-                float maxV = maxVs[flavor];
-                float weight = weights[flavor];
-                //weight *= 10000.0 * length(velocity.xy) / maxV + 1.0;
-                color.rgb = colors[flavor];
 
                 // Has the user paused the simulation?
                 if (userInput.w == 1.0) { return; }
 
-                // Movement
-                state.xy += oldVelocity.xy * simulationSpeed;
-
-                // Gain/loss of energy
-                state.z += state.y * energyGain;
-
-                // Attraction of particles towards each other
-                if (gravity != 0.0) {
-                    vec2 accel = vec2(0.0);
-                    for (int i = 0; i < particleLimit; i++) {
-                        if (i == currentIndex) { continue; }
-                        vec4 otherState = allStates[i];
-                        int otherFlavor = getFlavor(otherState);
-                        float otherWeight = weights[otherFlavor];
-                        vec2 dist = getDistance(state.xy, otherState.xy);
-                        dist = attractionRotationMatrix * dist / scale / gravityScale;
-                        if (length(dist) < distanceCutoff) { continue; }
-                        accel += dist
-                            * otherWeight
-                            / pow(length(dist), gravityPower)
-                            * gravity
-                            / weight;
-                    }
-                    if (length(accel) > maxAccel) {
-                        accel *= vec2(maxAccel / length(accel));
-                    }
-                    velocity.xy += accel;
-                }
-
-                // Attraction between particles based on flavor
-                if (flavorAttraction != 0.0) {
-                    float repulsion = 100.0 * pow(numFlavors - 1.0, 2.0);
-                    vec2 accel = vec2(0.0);
-                    for (int i = 0; i < particleLimit; i++) {
-                        if (i == currentIndex) { continue; }
-                        vec4 otherState = allStates[i];
-                        vec2 dist = getDistance(state.xy, otherState.xy);
-                        dist = attractionRotationMatrix * dist / scale / flavorAttractionScale;
-                        float distLength = length(dist);
-                        if (distLength < distanceCutoff) { continue; }
-                        int otherFlavor = getFlavor(otherState);
-                        if (distLength < 0.10) {
-                            /* more powerful force at close range */
-                            accel += dist
-                                / distLength
-                                * pow((distLength * 10.0), 2.0)
-                                * flavorAttraction * 100000000.0
-                                * (flavor == otherFlavor ? repulsion : -1.0)
-                                / weight;
-                        }
-                        accel += dist.xy
-                            / pow(distLength, flavorAttractionPower)
-                            * flavorAttraction
-                            * (flavor == otherFlavor ? repulsion : -1.0)
-                            / weight;
-                    }
-                    if (length(accel) > maxAccel) {
-                        accel *= vec2(maxAccel / length(accel));
-                    }
-                    velocity.xy += accel;
-                }
-
-                // Super-strong close-range attraction
+                // Turn direction, based on neighbours
+                int neighbors_left = 0;
+                int neighbors_right = 0;
                 for (int i = 0; i < particleLimit; i++) {
-                    if (i == currentIndex) { continue; }
+                    if (i == currentIndex) continue;
                     vec4 otherState = allStates[i];
                     vec2 dist = getDistance(state.xy, otherState.xy);
-                    dist = attractionRotationMatrix * dist / scale;
-                    if (length(dist) < strongAttractionDistanceMax
-                        && length(dist) > strongAttractionDistanceMin) {
-                        state.xy += dist * strongAttraction;
+                    if (length(dist) < visionRadius && length(dist) > distanceCutoff) {
+                        float angle = atan(dist.y, dist.x);
+                        angle -= state.z;
+                        angle = modulo2PI(angle);
+                        if (angle < PI) {
+                            neighbors_right++;
+                        }
+                        else {
+                            neighbors_left++;
+                        }
                     }
                 }
+                int total_neighbors = neighbors_left + neighbors_right;
+                state.z += constantRotation + attractionRotation * float(total_neighbors) * float(sign(neighbors_left - neighbors_right));
+
+                // Colorize the particle
+                if (total_neighbors < 3)
+                    color.rgb = colors[0];
+                else if (total_neighbors < 18)
+                    color.rgb = colors[1];
+                else if (total_neighbors < 28)
+                    color.rgb = colors[2];
+                else
+                    color.rgb = colors[3];
+
+                // Movement
+                state.xy += speed * vec2(cos(state.z), sin(state.z));
+
+                // Keep the rotation between 0 and 2*PI
+                state.z = modulo2PI(state.z);
 
                 // Keep particles inside the universe
                 if (cyclicalGeometry) {
@@ -257,42 +210,21 @@
                     }
                 }
                 else {
+                    // This doesn't work very well, but we use cyclicalGeometry anyway
                     for (int dimension = 0; dimension < 2; dimension++) {
                         if (state[dimension] < -1.0) {
                             state[dimension] = -1.0;
-                            velocity[dimension] *= -bounceDampeningFactor;
-                            velocity[1 - dimension] *= bounceDampeningFactor;
                         }
                         else if (state[dimension] > 1.0) {
                             state[dimension] = 1.0;
-                            velocity[dimension] *= -bounceDampeningFactor;
-                            velocity[1 - dimension] *= bounceDampeningFactor;
                         }
                     }
-                }
-
-                // Limit velocity
-                if (length(velocity.xy) > maxV) {
-                    velocity.xy *= vec2(maxV / length(velocity.xy));
                 }
 
                 // Movement towards the mouse pointer
                 if (userInput.b == 1.0) {
-                    float dist = distance(state.xy, userInput.xy);
-                    if (dist <= pointerRadius) {
-                        dist /= pointerRadius;  // normalize distance to 1.0
-                        if (pointerSlowFactor != 0.0) {
-                            velocity.xy *= 1.0 - pointerSlowFactor * (1.0 - dist);
-                        }
-                        if (pointerPullFactor != 0.0) {
-                            velocity.xy += pointerPullFactor * (userInput.xy - state.xy)
-                                * dist / simulationSpeed;
-                        }
-                    }
+                    // not implemented
                 }
-
-                // Limit energy
-                if (state.z > 1.0) { state.z = 1.0; }
             }
         </script>
         <script type="application/javascript" id="boilerplate">
